[package]
name = "mongodb-cursor-pagination"
version = "0.3.0"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"
license = "MIT"
keywords = ["mongo", "mongodb", "database", "cursor", "pagination"]
readme = "README.md"
repository = "https://github.com/briandeboer/mongodb-cursor-pagination"
description = """
Provides cursor based pagination for the native MongoDB driver in Rust.
"""

[features]
default = []
graphql = ["juniper"]

[dependencies]
futures = "0.3.4"
base64 = "0.13.0"
bson = "1.2.0"
log = "0.4.11"
mongodb = "1.2.0"
serde = "1.0"
juniper = { version = "0.15.3", optional = true }

